--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -124,7 +124,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="优质数据源"
+                        android:text="软件版本"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/ts_24" />
 
